// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infiniteHits() calls twice render(<Hits props />, container) 1`] = `
<InfiniteHits
  cssClasses={
    Object {
      "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
      "disabledLoadPrevious": "ais-InfiniteHits-loadPrevious--disabled",
      "emptyRoot": "ais-InfiniteHits--empty",
      "item": "ais-InfiniteHits-item",
      "list": "ais-InfiniteHits-list",
      "loadMore": "ais-InfiniteHits-loadMore",
      "loadPrevious": "ais-InfiniteHits-loadPrevious",
      "root": "ais-InfiniteHits root cx",
    }
  }
  hasShowPrevious={false}
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
      },
    ]
  }
  isFirstPage={true}
  isLastPage={false}
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
        },
      ],
    }
  }
  showMore={[Function]}
  showPrevious={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
        "showMoreText": "Show more results",
        "showPreviousText": "Show previous results",
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
        "showMoreText": false,
        "showPreviousText": false,
      },
    }
  }
/>
`;

exports[`infiniteHits() calls twice render(<Hits props />, container) 2`] = `
<InfiniteHits
  cssClasses={
    Object {
      "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
      "disabledLoadPrevious": "ais-InfiniteHits-loadPrevious--disabled",
      "emptyRoot": "ais-InfiniteHits--empty",
      "item": "ais-InfiniteHits-item",
      "list": "ais-InfiniteHits-list",
      "loadMore": "ais-InfiniteHits-loadMore",
      "loadPrevious": "ais-InfiniteHits-loadPrevious",
      "root": "ais-InfiniteHits root cx",
    }
  }
  hasShowPrevious={false}
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
      },
    ]
  }
  isFirstPage={true}
  isLastPage={false}
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
        },
      ],
    }
  }
  showMore={[Function]}
  showPrevious={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
        "showMoreText": "Show more results",
        "showPreviousText": "Show previous results",
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
        "showMoreText": false,
        "showPreviousText": false,
      },
    }
  }
/>
`;

exports[`infiniteHits() if it is not the first page, then the props should contain isFirstPage false 1`] = `
<InfiniteHits
  cssClasses={
    Object {
      "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
      "disabledLoadPrevious": "ais-InfiniteHits-loadPrevious--disabled",
      "emptyRoot": "ais-InfiniteHits--empty",
      "item": "ais-InfiniteHits-item",
      "list": "ais-InfiniteHits-list",
      "loadMore": "ais-InfiniteHits-loadMore",
      "loadPrevious": "ais-InfiniteHits-loadPrevious",
      "root": "ais-InfiniteHits root cx",
    }
  }
  hasShowPrevious={false}
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
      },
    ]
  }
  isFirstPage={false}
  isLastPage={true}
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
        },
      ],
      "nbPages": 2,
      "page": 1,
    }
  }
  showMore={[Function]}
  showPrevious={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
        "showMoreText": "Show more results",
        "showPreviousText": "Show previous results",
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
        "showMoreText": false,
        "showPreviousText": false,
      },
    }
  }
/>
`;

exports[`infiniteHits() if it is the first page, then the props should contain isFirstPage true 1`] = `
<InfiniteHits
  cssClasses={
    Object {
      "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
      "disabledLoadPrevious": "ais-InfiniteHits-loadPrevious--disabled",
      "emptyRoot": "ais-InfiniteHits--empty",
      "item": "ais-InfiniteHits-item",
      "list": "ais-InfiniteHits-list",
      "loadMore": "ais-InfiniteHits-loadMore",
      "loadPrevious": "ais-InfiniteHits-loadPrevious",
      "root": "ais-InfiniteHits root cx",
    }
  }
  hasShowPrevious={false}
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
      },
    ]
  }
  isFirstPage={true}
  isLastPage={false}
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
        },
      ],
      "nbPages": 2,
      "page": 0,
    }
  }
  showMore={[Function]}
  showPrevious={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
        "showMoreText": "Show more results",
        "showPreviousText": "Show previous results",
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
        "showMoreText": false,
        "showPreviousText": false,
      },
    }
  }
/>
`;

exports[`infiniteHits() if it is the first page, then the props should contain isFirstPage true 2`] = `
<InfiniteHits
  cssClasses={
    Object {
      "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
      "disabledLoadPrevious": "ais-InfiniteHits-loadPrevious--disabled",
      "emptyRoot": "ais-InfiniteHits--empty",
      "item": "ais-InfiniteHits-item",
      "list": "ais-InfiniteHits-list",
      "loadMore": "ais-InfiniteHits-loadMore",
      "loadPrevious": "ais-InfiniteHits-loadPrevious",
      "root": "ais-InfiniteHits root cx",
    }
  }
  hasShowPrevious={false}
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
      },
    ]
  }
  isFirstPage={true}
  isLastPage={true}
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
        },
      ],
      "nbPages": 2,
      "page": 1,
    }
  }
  showMore={[Function]}
  showPrevious={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
        "showMoreText": "Show more results",
        "showPreviousText": "Show previous results",
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
        "showMoreText": false,
        "showPreviousText": false,
      },
    }
  }
/>
`;

exports[`infiniteHits() if it is the last page, then the props should contain isLastPage true 1`] = `
<InfiniteHits
  cssClasses={
    Object {
      "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
      "disabledLoadPrevious": "ais-InfiniteHits-loadPrevious--disabled",
      "emptyRoot": "ais-InfiniteHits--empty",
      "item": "ais-InfiniteHits-item",
      "list": "ais-InfiniteHits-list",
      "loadMore": "ais-InfiniteHits-loadMore",
      "loadPrevious": "ais-InfiniteHits-loadPrevious",
      "root": "ais-InfiniteHits root cx",
    }
  }
  hasShowPrevious={false}
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
      },
    ]
  }
  isFirstPage={true}
  isLastPage={false}
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
        },
      ],
      "nbPages": 2,
      "page": 0,
    }
  }
  showMore={[Function]}
  showPrevious={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
        "showMoreText": "Show more results",
        "showPreviousText": "Show previous results",
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
        "showMoreText": false,
        "showPreviousText": false,
      },
    }
  }
/>
`;

exports[`infiniteHits() if it is the last page, then the props should contain isLastPage true 2`] = `
<InfiniteHits
  cssClasses={
    Object {
      "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
      "disabledLoadPrevious": "ais-InfiniteHits-loadPrevious--disabled",
      "emptyRoot": "ais-InfiniteHits--empty",
      "item": "ais-InfiniteHits-item",
      "list": "ais-InfiniteHits-list",
      "loadMore": "ais-InfiniteHits-loadMore",
      "loadPrevious": "ais-InfiniteHits-loadPrevious",
      "root": "ais-InfiniteHits root cx",
    }
  }
  hasShowPrevious={false}
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
      },
    ]
  }
  isFirstPage={true}
  isLastPage={true}
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
        },
      ],
      "nbPages": 2,
      "page": 1,
    }
  }
  showMore={[Function]}
  showPrevious={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
        "showMoreText": "Show more results",
        "showPreviousText": "Show previous results",
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
        "showMoreText": false,
        "showPreviousText": false,
      },
    }
  }
/>
`;

exports[`infiniteHits() renders transformed items 1`] = `
<InfiniteHits
  cssClasses={
    Object {
      "disabledLoadMore": "ais-InfiniteHits-loadMore--disabled",
      "disabledLoadPrevious": "ais-InfiniteHits-loadPrevious--disabled",
      "emptyRoot": "ais-InfiniteHits--empty",
      "item": "ais-InfiniteHits-item",
      "list": "ais-InfiniteHits-list",
      "loadMore": "ais-InfiniteHits-loadMore",
      "loadPrevious": "ais-InfiniteHits-loadPrevious",
      "root": "ais-InfiniteHits",
    }
  }
  hasShowPrevious={false}
  hits={
    Array [
      Object {
        "first": "hit",
        "second": "hit",
        "transformed": true,
      },
    ]
  }
  isFirstPage={true}
  isLastPage={false}
  results={
    Object {
      "hits": Array [
        Object {
          "first": "hit",
          "second": "hit",
          "transformed": true,
        },
      ],
    }
  }
  showMore={[Function]}
  showPrevious={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "empty": "No results",
        "item": [Function],
        "showMoreText": "Show more results",
        "showPreviousText": "Show previous results",
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "empty": false,
        "item": false,
        "showMoreText": false,
        "showPreviousText": false,
      },
    }
  }
/>
`;
